# fastapi_auth_backend

./: .gitignore  main.py  pyproject.toml  routes.py
auth/: endpoints.py  jwt.py  permissions.py  schemas.py
base/: models.py
config/: base.py  db.py  settings.py
core/: db.py  settings.py
db/: env.py
db/versions/: 0afeb3584dee_.py  600deec4fe09_.py  c802dac8c347_.py
migrations/: env.py
src/auth/: endpoints.py  jwt.py  models.py  permissions.py  schemas.py  send_email.py  services.py
src/base/: crud_utils.py
src/base/utils/: email.py
src/core/: __init__.py
src/models/: __init__.py  auth.py  db.py  user.py
src/user/: models.py  schemas.py  services.py
user/: models.py  schemas.py  services.py
